@@ -1,3 +1,6 @@
+5 March 2013: Matthijs
+	- Add hash to rrl bucket
+
 5 March 2013: Wouter
 	- Fixup the growth and shrinkage of nsd.db.  This should use less
 	  calls to remap and change the file and mmap size.
